force-app/main/default/objects/Opportunity__c/Opportunity__c.object-meta.xml
<CustomObject>
    <label>机会</label>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>