force-app/main/default/objects/Opportunity__c/fields/Detail_Project_Location__c.field-meta.xml
<CustomField>
    <fullName>Detail_Project_Location__c</fullName>
    <label>Detailed Project Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>