force-app/main/default/objects/Opportunity__c/fields/Opportunity_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Type__c</fullName>
    <label>Opportunity Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>