force-app/main/default/objects/Opportunity__c/fields/Other_Requests__c.field-meta.xml
<CustomField>
    <fullName>Other_Requests__c</fullName>
    <label>Other Requests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>