force-app/main/default/objects/Opportunity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact Initiation</fullName>
                <default>true</default>
                <label>Contact Initiation</label>
            </value>
            <value>
                <fullName>In Quotation or Bidding</fullName>
            </value>
            <value>
                <fullName>Quote Accept or Bidding Win</fullName>
            </value>
            <value>
                <fullName>PO Placed</fullName>
            </value>
            <value>
                <fullName>Closed(Lost)</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Needs Analysis</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Closed(Win)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>