force-app/main/default/objects/Opportunity__c/recordTypes/HVAC_US.recordType-meta.xml
<RecordType>
    <fullName>HVAC_US</fullName>
    <active>true</active>
    <label>HVAC US</label>
</RecordType>