force-app/main/default/objects/Opportunity__c/recordTypes/Opportunity_JP.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_JP</fullName>
    <active>true</active>
    <label>Opportunity/JP</label>
</RecordType>