force-app/main/default/objects/Opportunity__c/recordTypes/Opportunity_Malaysia.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Malaysia</fullName>
    <active>true</active>
    <label>Opportunity/Malaysia</label>
</RecordType>