force-app/main/default/objects/Opportunity__c/recordTypes/Opportunity_Sales_Department_CE.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Sales_Department_CE</fullName>
    <active>true</active>
    <label>Opportunity/Sales Department CE Utilized</label>
</RecordType>