force-app/main/default/objects/Opportunity__c/recordTypes/Opportunity_Sales_Department_HA.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Sales_Department_HA</fullName>
    <active>true</active>
    <label>Opportunity/Sales Department HA Utilized</label>
</RecordType>