force-app/main/default/objects/Opportunity__c/recordTypes/Opportunity_USA.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_USA</fullName>
    <active>true</active>
    <label>Opportunity/USA</label>
</RecordType>