force-app/main/default/objects/Opportunity__c/validationRules/LostReasonRequiredCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>LostReasonRequiredCheck</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Stage__c , &apos;Closed(Lost)&apos;) &amp;&amp;  ISBLANK( Lost_Reason__c )</errorConditionFormula>
    <errorDisplayField>Lost_Reason__c</errorDisplayField>
    <errorMessage>Please complete this field before updating the stage</errorMessage>
</ValidationRule>