force-app/main/default/objects/Opportunity__c/validationRules/PO_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_validation</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( Stage__c ) = &apos;Closed(Win)&apos; &amp;&amp;  Sales_Amount__c  &gt; 0 &amp;&amp;  PO_No__c  = null</errorConditionFormula>
    <errorDisplayField>PO_No__c</errorDisplayField>
    <errorMessage>Pls input PO No When opportunity is won</errorMessage>
</ValidationRule>