force-app/main/default/objects/Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Number__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Sales_Amount__c</columns>
    <columns>Probability__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Opportunity_Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>